--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
     <string name="app13">Номер</string>
     <string name="app14">Зарегистрироваться</string>
     <string name="app15">Согласен с условиями пользования и политикой конфеденциальности</string>
+    <string name="kathryn_murphy">Kathryn Murphy</string>
+    <string name="courtney_henry">Courtney Henry</string>
+    <string name="eleanor_pena">Eleanor Pena</string>
+    <string name="marvin_mckinney">Marvin McKinney</string>
+    <string name="app16">Robert Fox</string>Albert Flores
+    <string name="app17">Albert Flores</string>
 </resources>
